--- a/contactus.html
+++ b/contactus.html
@@ -78,7 +78,7 @@
       <div class="col-md-8">
         <h2>Please contact us for business, Info, or press at:</h2>
         <div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-6">
               <div class="form-group">
                 <label for="exampleInputEmail1">President Maria Pichardo </label>
@@ -92,7 +92,7 @@
                   style="background-color:#0e76a8"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
-          </div>
+          </div>-->
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
